--- a/app/src/main/res/layout/last_matches_list_item.xml
+++ b/app/src/main/res/layout/last_matches_list_item.xml
@@ -18,20 +18,20 @@
         android:gravity="center"
         android:width="0dp"
         android:layout_weight=".15"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:gravity="center"
-        android:id="@+id/champ_name"
-        android:layout_weight=".15"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="center_vertical|center_horizontal"-->
+        <!--android:gravity="center"-->
+        <!--android:id="@+id/champ_name"-->
+        <!--android:layout_weight=".15"/>-->
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
+        android:paddingLeft="30dp"
         android:paddingRight="10dp"
         android:width="0dp"
         android:layout_weight=".30">
