--- a/app/src/main/res/layout/last_matches_list_item.xml
+++ b/app/src/main/res/layout/last_matches_list_item.xml
@@ -5,6 +5,8 @@
     android:orientation="horizontal"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:paddingLeft="32dp"
+    android:paddingRight="32dp"
     android:visibility="gone"
     android:id="@+id/game_list_item">
 
@@ -17,7 +19,7 @@
         android:layout_gravity="center_vertical|center_horizontal"
         android:gravity="center"
         android:width="0dp"
-        android:layout_weight=".15"/>
+        android:layout_weight=".20"/>
     <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="match_parent"-->
@@ -64,7 +66,7 @@
         android:id="@+id/gold"
         android:paddingRight="20dp"
         android:width="0dp"
-        android:layout_weight=".40"/>
+        android:layout_weight=".50"/>
 
 
 </LinearLayout>
