--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,4 +12,8 @@
         android:icon="@drawable/ic_launcher_background"
         android:title="@string/settings"/>
 
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_launcher_background"
+        android:title="@string/refresh"/>
 </menu>
